--- a/home.css
+++ b/home.css
@@ -7,6 +7,7 @@
 body {
   width: 100%;
   height: auto;
+  background-color:#D3D3D3;
 }
 /* primary-header */
 .primary-header {
@@ -14,8 +15,10 @@ body {
   flex-direction: row;
   justify-content: flex-end;
   background-color: #272A31;
+  padding: 5px;
   width: 100%;
   height: 25px;
+  cursor: pointer;
 }
 #social-icons {
   display: flex;
@@ -36,17 +39,26 @@ body {
   justify-content: space-between;
   width: 100%;
   height: 70px;
+  background-color: #f9f9f9;
 }
 .toolbar img {
   width: 60%;
   padding: 5px;
 }
-.toolbar ul{
+#pages{
   display: flex;
   flex-direction: row;
-   justify-content: space-between;
-  width: 30%;
+  width: 50%;
   gap: 1rem;
+}
+#pages:hover {
+  font-size: 25px;
+  /* background-color: #EC5242; */
+  color: #272A31;
+  transition: 0.06s;
+}
+#pages:active {
+  color: #EC5242;
 }
 .links  {
   list-style-type: none;
@@ -95,7 +107,7 @@ padding: 4px;
   padding: 4px 12px;
     margin: 0 auto;
     margin-bottom: 2rem;
-    background-color: #D3D3D3;
+    background-color: #F9F9F9;
     border: 4px solid rgb(255, 255, 255);
 }
 #date {
@@ -109,6 +121,7 @@ padding: 4px;
   padding: 4px 12px;
   margin-bottom: 20px;
   color: #272A31;
+  font-family: cocogoos;
 }
 #place {
   width: 100%;
@@ -120,22 +133,36 @@ padding: 4px;
 
 }
 .main-program {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(5,1fr);
-  row-gap: 15px;
+  display: flex;
+  flex-direction: column;
   background-image: url("./images/pattern_bg.png");
   background-color: #272A31;
   justify-items: center;
   align-items: center;
+  width: 100%;
+  height: fit-content;
+}
+#program-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(5,1fr);
+  background-image: url("./images/pattern_bg.png");
+  background-color: #272A31;
+  justify-self: center;
+  align-self: center;
+  gap: 8px;
+  margin-bottom: 1rem;
 }
 #program {
   margin: 20px auto;
   color: #D3D3D3;
 }
 #one, #two, #three, #four, #five{
-  
-  border: 5px solid #D3D3D3;
+  background: rgba(255, 255, 255, 0.1);
+  display: grid;
+  align-self: center;
+  justify-items: center;
+  row-gap: 10px;
     
 }
 .list {
@@ -197,6 +224,9 @@ padding: 4px;
   transition: 0.3s;
 }
 /* FEATURED SPEAKERS */
+.feature-speakers, footer {
+  background-color:#D3D3D3;
+}
 #speakers {
   display: grid;
   grid-template-columns: 1fr;
@@ -206,6 +236,7 @@ padding: 4px;
   text-align: center;
   color: #272A31;
   font-weight: bold;
+  
 }
 .speaker-1 {
 display: flex;
@@ -232,10 +263,11 @@ margin: 10px auto
 .btn-speaker {
   width: 90%;
   height: 40px;
+  background-color: #fff;
   border: 2px solid #D3D3D3;
   margin: 0 auto ;
   margin-top: 10px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 .btn-speaker:hover {
   cursor: pointer;
@@ -250,16 +282,163 @@ margin: 10px auto
   justify-content: center;
   gap: 5px;
 }
+/* PARTNER SECTION */
+#partner {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #272A31;
+  margin: 0 auto;
+  filter: grayscale();
+}
+.partner {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+}
+.partner-img {
+  width: 80%;
+}
+.partner-title {
+  width: 20%;
+  height: 50px;
+  margin: 20px auto;
+  color: #fff;
+  text-decoration: 5px solid #EC5242 underline;
+}
+#partner-1 {
+display: flex;
+align-items: center;
+justify-content: center;
+/* gap: 20%; */
+margin: 20px auto;
+}
+#partner-2 {
+  display: flex;
+  align-items: center;
+justify-content: center;
+margin: 20px auto;
+/* gap: 20%; */
+}
+.daumkakao, .mozilla, .google, .naver, .airbnb {
+  color: white;
+  margin: 0 1rem;
+}
+#airbnb-img {
+  width: 50%;
+  background-color: none;
+}
+/* FOOTER */
+footer {
+  height: 150px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 auto;
+  padding: 20px;
+  gap: 20px;
+}
+#footer-img {
+  width: 150px;
+  height: 100px;
+}
 /* MEDIA QUERY */
 @media (max-width: 500px) {
-  
+  .primary-header, .links {
+    display: none;
+  }
+  #partner {
+    display: none;
+  }
+  footer {
+    display: none;
+  }
 }
 
 @media (min-width: 700px) {
-  .main-program {
+  #pages {
+    display: flex;
+    flex-direction: row;
+    width: 46%;
+    gap: 1rem
+  }
+  .introduction {
+  width: 100%;
+  height: 39rem;
+  margin: 0 auto;
+  background-image: url(./images/main_big.png);
+  background-repeat: repeat;
+  background-size: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.primary-text {
+  border-radius: 5px;
+  height: fit-content;
+  width: 50%;
+  padding: 4px 12px;
+  margin: 0 auto;
+  margin-bottom: 3rem;
+  background-color: #F9F9F9;
+  border: 4px solid rgb(255, 255, 255);
+}
+  #program-list {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr;
+    width: 70%;
+    column-gap: 10px;
   }
   
+  #one, #two, #three, #four, #five{
+    text-align: center;
+    background: rgba(255, 255, 255, 0.1);
+      border: none;
+      width: 100%;
+      height: fit-content;
+      cursor: pointer;
+  }
+  #program-list > *:hover {
+    border: 3px solid #D3D3D3;
+  }
+  .list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #speakers {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    justify-self: center;
+    align-self: center;
+  }
+  #featured-speakers {
+      width: 58%;
+      margin: 10px auto;
+  }
+  .partners {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 20px auto;
+  }
+  .partners:hover {
+    cursor: pointer;
+  }
+  .partner:hover {
+    width: 100%;
+    height: auto;
+    border-bottom: 2px solid #EC5242;
+  }
+  .btn-speaker {
+    display: none;
+  }
 }
