--- a/home.css
+++ b/home.css
@@ -4,167 +4,188 @@
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
 }
+
 body {
   width: 100%;
   height: auto;
-  background-color:#D3D3D3;
+  background-color: #d3d3d3;
 }
+
 /* primary-header */
 .primary-header {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  background-color: #272A31;
+  background-color: #272a31;
   padding: 5px;
   width: 100%;
-  height: 25px;
+  height: 35px;
   cursor: pointer;
 }
+
 #social-icons {
+  width: 30%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
-  margin-left: 20em;
-  gap: 1rem;
+  justify-content: space-around;
 }
+
 .media-icons {
   list-style: none;
 }
+
 /* TOOLBAR */
 .toolbar {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   height: 70px;
   background-color: #f9f9f9;
 }
+
 .toolbar img {
   width: 60%;
   padding: 5px;
 }
-#pages{
+
+.toolbar ul {
   display: flex;
   flex-direction: row;
-  width: 50%;
+  justify-content: space-between;
+  width: 30%;
   gap: 1rem;
 }
-#pages:hover {
-  font-size: 25px;
-  /* background-color: #EC5242; */
-  color: #272A31;
-  transition: 0.06s;
-}
-#pages:active {
-  color: #EC5242;
-}
-.links  {
+
+.links {
   list-style-type: none;
   gap: 1rem;
-  text-align: none;
 }
+
+a {
+  text-decoration: none;
+}
+
 .links a {
   text-decoration: none;
 }
+
 /* INTRODUCTION */
 .introduction {
   width: 100%;
-  height: fit-content;
-  margin: 10px auto;
+  height: 32rem;
   background-image: url(./images/main_big.png);
   background-repeat: repeat;
   background-size: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
-h1,h2 {
-  color: #EC5242;
+
+h1,
+h2 {
+  color: #ec5242;
 }
+
 #hello-text {
   font-weight: 300;
   font-size: 32px;
   font-style: normal;
-  letter-spacing: .7px;
-padding: 4px;
+  letter-spacing: 0.7px;
+  padding: 4px;
 }
+
 #summer-text {
   font-size: 44px;
   font-weight: 900;
   font-style: normal;
-  letter-spacing: .7px;
+  letter-spacing: 0.7px;
   padding: 4px 12px;
 }
+
 #details {
   display: flex;
-  align-items:  center;
+  align-items: center;
   justify-content: flex-start;
+
   /* margin: 0 auto; */
 }
+
 .primary-text {
   border-radius: 5px;
   height: auto;
   width: 90%;
   padding: 4px 12px;
-    margin: 0 auto;
-    margin-bottom: 2rem;
-    background-color: #F9F9F9;
-    border: 4px solid rgb(255, 255, 255);
+  margin: 0 auto;
+  margin-bottom: 2rem;
+  background-color: #f9f9f9;
+  border: 4px solid rgb(255, 255, 255);
 }
+
 #date {
   width: 100%;
-  height: fit-content;
+  height: auto;
   font-weight: 900;
   font-size: 24px;
   line-height: 1.1;
-  font-style: none;
-  letter-spacing: .7px;
+  font-style: normal;
+  letter-spacing: 0.7px;
   padding: 4px 12px;
   margin-bottom: 20px;
-  color: #272A31;
-  font-family: cocogoos;
+  color: #272a31;
 }
+
 #place {
   width: 100%;
   font-size: 18px;
   font-weight: 300;
   font-style: normal;
   line-height: 1.1;
-  letter-spacing: .5px;
-
+  letter-spacing: 0.5px;
 }
+
 .main-program {
   display: flex;
   flex-direction: column;
   background-image: url("./images/pattern_bg.png");
-  background-color: #272A31;
+  background-color: #272a31;
   justify-items: center;
   align-items: center;
   width: 100%;
-  height: fit-content;
+  height: auto;
 }
+
 #program-list {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(5,1fr);
+  grid-template-rows: repeat(5, 1fr);
   background-image: url("./images/pattern_bg.png");
-  background-color: #272A31;
+  background-color: #272a31;
   justify-self: center;
   align-self: center;
   gap: 8px;
   margin-bottom: 1rem;
 }
+
 #program {
   margin: 20px auto;
-  color: #D3D3D3;
+  color: #d3d3d3;
 }
-#one, #two, #three, #four, #five{
+
+#one,
+#two,
+#three,
+#four,
+#five {
   background: rgba(255, 255, 255, 0.1);
   display: grid;
   align-self: center;
   justify-items: center;
   row-gap: 10px;
-    
 }
+
 .list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -174,32 +195,37 @@ padding: 4px;
   align-items: center;
   gap: 20px;
 }
+
 .main {
   display: grid;
   list-style-type: none;
 }
+
 .program-img {
   grid-column: 1/ span 1;
   grid-row: 1/2;
   align-items: center;
   justify-items: center;
 }
+
 .main h4 {
   grid-column: 2/span 1;
   grid-row: 1/2;
   align-self: center;
-    font-weight: 600;
-    color: #EC5242;
+  font-weight: 600;
+  color: #ec5242;
 }
-.list-para  {
+
+.list-para {
   grid-column: 3 / span 3;
   align-self: center;
   color: #fff;
   font-size: 13px;
   font-weight: normal;
   line-height: 1.1;
-  letter-spacing: .6px;
+  letter-spacing: 0.6px;
 }
+
 #join {
   display: flex;
   flex-direction: row;
@@ -207,74 +233,94 @@ padding: 4px;
   align-items: center;
   width: 70%;
   height: 40px;
-  background-color: #EC5242;
+  background-color: #ec5242;
   margin-bottom: 30px;
-  
 }
+
 #join span {
   font-size: 14px;
   font-weight: 700;
-  color: #D3D3D3;
+  color: #d3d3d3;
   font-style: normal;
   padding: 4px 12px;
 }
+
 #join:hover {
   cursor: pointer;
-  background-color: #F6A8A0;
+  background-color: #f6a8a0;
   transition: 0.3s;
 }
+
 /* FEATURED SPEAKERS */
-.feature-speakers, footer {
-  background-color:#D3D3D3;
+.feature-speakers,
+footer {
+  background-color: #d3d3d3;
 }
+
 #speakers {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
 }
+
 #featured-speakers {
   text-align: center;
-  color: #272A31;
+  color: #272a31;
   font-weight: bold;
-  
 }
+
 .speaker-1 {
-display: flex;
-flex-direction: row;
-align-items: center;
-gap: 20px;
-margin: 10px auto
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+  margin: 10px auto;
 }
+
+.main-speakers {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
 .name {
   display: flex;
   flex-direction: column;
   font-weight: bolder;
 }
-.speaker-title {
+
+.speaker_title {
   font-style: italic;
-  color: #EC5242;
+  color: #ec5242;
   font-weight: bold;
 }
+
 .description {
   font-size: 14px;
   line-height: 1.1;
-  color: #272A31;
+  color: #272a31;
 }
+
 .btn-speaker {
   width: 90%;
   height: 40px;
   background-color: #fff;
-  border: 2px solid #D3D3D3;
-  margin: 0 auto ;
+  border: 2px solid #d3d3d3;
+  margin: 0 auto;
   margin-top: 10px;
+
   /* margin-bottom: 20px; */
 }
+
 .btn-speaker:hover {
   cursor: pointer;
-  background-color: #F6A8A0;
+  background-color: #f6a8a0;
   color: #fff;
   font-weight: bold;
 }
+
 #button {
   display: flex;
   flex-direction: row;
@@ -282,16 +328,18 @@ margin: 10px auto
   justify-content: center;
   gap: 5px;
 }
+
 /* PARTNER SECTION */
 #partner {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #272A31;
+  background-color: #272a31;
   margin: 0 auto;
   filter: grayscale();
 }
+
 .partner {
   display: flex;
   flex-direction: row;
@@ -299,38 +347,50 @@ margin: 10px auto
   justify-content: center;
   list-style-type: none;
 }
+
 .partner-img {
   width: 80%;
 }
+
 .partner-title {
   width: 20%;
   height: 50px;
   margin: 20px auto;
   color: #fff;
-  text-decoration: 5px solid #EC5242 underline;
+  text-decoration: 5px solid #ec5242 underline;
 }
+
 #partner-1 {
-display: flex;
-align-items: center;
-justify-content: center;
-/* gap: 20%; */
-margin: 20px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* gap: 20%; */
+  margin: 20px auto;
 }
+
 #partner-2 {
   display: flex;
   align-items: center;
-justify-content: center;
-margin: 20px auto;
-/* gap: 20%; */
+  justify-content: center;
+  margin: 20px auto;
+
+  /* gap: 20%; */
 }
-.daumkakao, .mozilla, .google, .naver, .airbnb {
+
+.daumkakao,
+.mozilla,
+.google,
+.naver,
+.airbnb {
   color: white;
   margin: 0 1rem;
 }
+
 #airbnb-img {
   width: 50%;
-  background-color: none;
 }
+
 /* FOOTER */
 footer {
   height: 150px;
@@ -341,52 +401,103 @@ footer {
   padding: 20px;
   gap: 20px;
 }
+
 #footer-img {
   width: 150px;
   height: 100px;
 }
+
 /* MEDIA QUERY */
-@media (max-width: 500px) {
-  .primary-header, .links {
+@media (max-width: 700px) {
+  #toolbar-img {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .toolbar img {
     display: none;
   }
+
+  .primary-header,
+  .links {
+    display: none;
+  }
+
   #partner {
     display: none;
   }
+
   footer {
+    display: none;
+  }
+
+  #summer_logo {
     display: none;
   }
 }
 
 @media (min-width: 700px) {
+  #toolbar-img {
+    display: none;
+  }
+
+  .toolbar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    padding: 20px;
+  }
+
+  .toolbar img {
+    width: 12%;
+    padding: 5px;
+  }
+
+  .mobile_menu {
+    width: 100%;
+  }
+
+  #link {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
+
   #pages {
     display: flex;
     flex-direction: row;
     width: 46%;
-    gap: 1rem
+    gap: 1rem;
   }
+
   .introduction {
-  width: 100%;
-  height: 39rem;
-  margin: 0 auto;
-  background-image: url(./images/main_big.png);
-  background-repeat: repeat;
-  background-size: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.primary-text {
-  border-radius: 5px;
-  height: fit-content;
-  width: 50%;
-  padding: 4px 12px;
-  margin: 0 auto;
-  margin-bottom: 3rem;
-  background-color: #F9F9F9;
-  border: 4px solid rgb(255, 255, 255);
-}
+    width: 100%;
+    height: 39rem;
+    margin: 0 auto;
+    background-image: url(./images/main_big.png);
+    background-repeat: repeat;
+    background-size: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 13rem;
+  }
+
+  .primary-text {
+    border-radius: 5px;
+    height: auto;
+    width: 100%;
+    padding: 4px 12px;
+    margin: 0 auto;
+    margin-bottom: 3rem;
+    background-color: #f9f9f9;
+    border: 4px solid rgb(255, 255, 255);
+  }
+
   #program-list {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -394,35 +505,60 @@ footer {
     width: 70%;
     column-gap: 10px;
   }
-  
-  #one, #two, #three, #four, #five{
+
+  #one,
+  #two,
+  #three,
+  #four,
+  #five {
     text-align: center;
     background: rgba(255, 255, 255, 0.1);
-      border: none;
-      width: 100%;
-      height: fit-content;
-      cursor: pointer;
+    border: none;
+    width: 100%;
+    height: auto;
+    cursor: pointer;
   }
+
   #program-list > *:hover {
-    border: 3px solid #D3D3D3;
+    border: 3px solid #d3d3d3;
   }
+
   .list {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
+
   #speakers {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     justify-self: center;
     align-self: center;
+    padding-left: 11rem;
   }
+
   #featured-speakers {
-      width: 58%;
-      margin: 10px auto;
+    width: 58%;
+    margin: 10px auto;
   }
+
+  .main_speakers {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .featured_speakers {
+    color: #fff;
+    text-align: center;
+    margin: 10px;
+    font-size: 32px;
+    padding: 5px;
+  }
+
   .partners {
     display: flex;
     flex-direction: row;
@@ -430,15 +566,65 @@ footer {
     justify-content: center;
     margin: 20px auto;
   }
+
   .partners:hover {
     cursor: pointer;
   }
+
   .partner:hover {
     width: 100%;
     height: auto;
-    border-bottom: 2px solid #EC5242;
+    border-bottom: 2px solid #ec5242;
   }
+
   .btn-speaker {
     display: none;
   }
+
+  footer {
+    padding-left: 11rem;
+    font-size: 20px;
+  }
+}
+
+/* OVERLAY */
+#overlay {
+  display: flex;
+  flex-direction: column;
+  background-color: #272a31;
+  opacity: 0.92;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
+
+#close-container {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  margin-top: 10%;
+}
+
+a:last-child {
+  margin-right: 0;
+}
+
+#menucontainer {
+  font-size: 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+#menucontainer a {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 1em 1em 1em;
+  font-size: 32px;
+  font-weight: 600;
+}
+
+#closer {
+  padding: 18px;
+  margin-right: 35px;
+  height: auto;
 }
