--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,13 @@
+@import "abstract/functions";
+@import "abstract/mixins";
+@import "abstract/variables";
 @import "base/base";
 @import "base/animation";
 @import "base/typography";
 @import "base/utilities";
 
-@import "abstract/functions";
-@import "abstract/mixins";
-@import "abstract/variables";
+// @import "components/";
 
-@import "components/";
+// @import "";
 
-@import "layout/";
-
-@import "pages/";
+@import "pages/home";
