--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,13 @@
 @import "abstract/functions";
 @import "abstract/mixins";
 @import "abstract/variables";
+
+@import "components/header";
+
 @import "base/base";
 @import "base/animation";
 @import "base/typography";
 @import "base/utilities";
-
-// @import "components/";
 
 // @import "";
 
