--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,9 +1,11 @@
 .navigation {
   width: 100%;
-  height: 10rem;
-  box-shadow: 1rem 2rem 4rem rgba($color-primary, $alpha: 0.2);
+  height: 15rem;
+  box-shadow: 0.5rem 0.5rem 1rem rgba($color-primary, $alpha: 0.1);
   font-size: 1.5rem;
   font-weight: 700;
+  display: flex;
+  flex-direction: column;
 
   &__top {
     background-color: $color-primary;
@@ -18,32 +20,37 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    // width: 40rem;
+    justify-content: space-between;
     padding: 1rem;
     list-style: none;
     height: 100%;
+    width: 40%;
   }
   &__list {
     display: flex;
     flex-direction: row;
-    // border: 1px solid red;
-
-    &:hover {
-      outline: 1px solid $color-primary-1;
-    }
   }
 
   &__link {
     text-decoration: none;
     color: $color-secondary;
     padding: 0.5rem;
-    // margin: 0 1.5rem;
+  }
+
+  &__bottom {
+    width: 100%;
+    height: 9rem;
+    margin: auto;
+  }
+  &__logo {
+    height: 8rem;
   }
 }
 #top {
-  width: 25%;
-  margin-right: 10rem;
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+  justify-content: end;
 }
 .nav-icon {
   display: flex;
@@ -52,4 +59,39 @@
   justify-content: center;
   width: 2.5rem;
   fill: $color-secondary;
+}
+.pages {
+  width: 60%;
+  height: 100%;
+
+  &__items {
+    height: inherit;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+  }
+  &__list {
+    padding: 1rem;
+  }
+  &__link {
+    text-decoration: none;
+    color: rgba($color-primary, $alpha: 0.7);
+    font-weight: 400;
+  }
+}
+.first {
+  color: $color-primary-red;
+}
+.last {
+  color: $color-primary-red;
+  outline: 4px solid $color-primary-red;
+}
+.bottom {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
