--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -2,3 +2,5 @@ $color-primary: #272a31;
 $color-primary-1: #efefee;
 $color-primary-red: #ec5242;
 $color-secondary: #d3d3d3;
+
+$grid-width: 114rem;
