--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,11 +6,13 @@
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
+  // border: 1px solid red;
 
   &__intro {
     width: 80%;
-    height: 80rem;
+    height: 80%;
     margin: auto;
+    // border: 1px solid red;
   }
 
   &__heading {
