Add style for footer

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,3 +28,8 @@ body {
   font-weight: 500;
   line-height: 1.7;
 }
+.footer-section {
+  width: 100%;
+  height: 60vh;
+  // border: 1px solid black;
+}
