--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -32,7 +32,6 @@
 .airbnb {
   font-size: 2.8rem;
   font-weight: 300;
-  
 }
 .mozilla,
 .naver {
@@ -74,4 +73,10 @@
   flex-direction: column;
   font-weight: 700;
   font-size: 1.5rem;
+}
+// styling footer for about page
+.footer-about {
+  width: 100%;
+  height: 20rem;
+  
 }
