--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,12 +3,15 @@
 @import "abstract/variables";
 
 @import "components/header";
+@import "components/hero";
+@import "components/speakers";
+@import "components/footer";
+@import "components/about";
 
 @import "base/base";
 @import "base/animation";
 @import "base/typography";
 @import "base/utilities";
 
-// @import "";
-
 @import "pages/home";
+// @import "";
